--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/all.css">
     <!-- Common CSS -->
     <link rel="stylesheet" href="css/common.css">
-    <title>Table Responsive</title>
+    <title>Table Responsive (Research)</title>
   </head>
   <body>
     <div class="container">
